<resources>
    <string name="app_name">Boxing timer</string>
    <string name="BoxingTimer">Boxing timer</string>
    <string name="rounds">Rounds</string>
    <string name="start">Start</string>
    <string name="round_time">Round time</string>
    <string name="rest_time">Rest time</string>
    <string name="wait">WAIT</string>
    <string name="stop">Stop</string>
    <string name="boxing">Boxing</string>
    <string name="rest">Rest</string>
</resources>
